fix: adjust spacing inside LimitedInput

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -80,7 +80,7 @@
 
 			input,
 			textarea {
-				@apply w-full;
+				@apply w-full block;
 			}
 		}
 
